--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-services: 
+services:
   - docker
 
 before_install:
@@ -8,14 +8,14 @@ before_install:
 script:
   - docker run -e CI=true jmehitch/react-test npm test
 
-after_success: 
+after_success:
   - docker build -t jmehitch/multi-client ./client
   - docker build -t jmehitch/multi-nginx ./nginx
   - docker build -t jmehitch/multi-server ./server
   - docker build -t jmehitch/multi-worker ./worker
-  # Login to Docker CLI
-  - echo "$DOCKER_PASS" | docker login -u "$DOCKER_ID" --password-stdin
-  # Push images to Docker Hub
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
   - docker push jmehitch/multi-client
   - docker push jmehitch/multi-nginx
   - docker push jmehitch/multi-server
@@ -24,13 +24,13 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: us-east-2
-  app: multi-container-docker
-  env: MultiContainerDocker-env
+  app: multi-docker
+  env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-east-2-807449038867
   bucket_path: docker-multi
-  on: 
+  on:
     branch: master
   access_key_id: 
     secure: $AWS_ACCESS_KEY
-  secret_access_key: 
+  secret_access_key:
     secure: $AWS_SECRET_KEY
